--- a/wp-content/themes/bravada/resources/fonts/fontfaces.css
+++ b/wp-content/themes/bravada/resources/fonts/fontfaces.css
@@ -14,11 +14,11 @@
 /* Glyph Icons */
 @font-face {
   font-family: 'iconmeta';
-  src:  url('./iconmeta.eot?9qd1ry');
-  src:  url('./iconmeta.eot?9qd1ry#iefix') format('embedded-opentype'),
-    url('./iconmeta.ttf?9qd1ry') format('truetype'),
-    url('./iconmeta.woff?9qd1ry') format('woff'),
-    url('./iconmeta.svg?9qd1ry#iconmeta') format('svg');
+  src:  url('/wp-content/themes/bravada/resources/fonts/iconmeta.eot?9qd1ry');
+  src:  url('/wp-content/themes/bravada/resources/fonts/iconmeta.eot?9qd1ry#iefix') format('embedded-opentype'),
+    url('/wp-content/themes/bravada/resources/fonts/iconmeta.ttf?9qd1ry') format('truetype'),
+    url('/wp-content/themes/bravada/resources/fonts/iconmeta.woff?9qd1ry') format('woff'),
+    url('/wp-content/themes/bravada/resources/fonts/iconmeta.svg?9qd1ry#iconmeta') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -888,11 +888,11 @@
 /* Social Icons */
 @font-face {
     font-family: 'socials';
-    src: url('./socials.eot');
-    src: url('./socials.eot#iefix') format('embedded-opentype'),
-       url('./socials.woff') format('woff'),
-       url('./socials.ttf') format('truetype'),
-       url('./socials.svg#socials') format('svg');
+    src: url('/wp-content/themes/bravada/resources/fonts/socials.eot');
+    src: url('/wp-content/themes/bravada/resources/fonts/socials.eot#iefix') format('embedded-opentype'),
+       url('/wp-content/themes/bravada/resources/fonts/socials.woff') format('woff'),
+       url('/wp-content/themes/bravada/resources/fonts/socials.ttf') format('truetype'),
+       url('/wp-content/themes/bravada/resources/fonts/socials.svg#socials') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -1235,11 +1235,11 @@
 /* Blocks font */
 @font-face {
     font-family: 'bravada-blocks';
-    src: url('./blocks.eot');
-    src: url('./blocks.eot#iefix') format('embedded-opentype'),
-        url('./blocks.woff') format('woff'),
-        url('./blocks.ttf') format('truetype'),
-        url('./blocks.svg#blocks') format('svg');
+    src: url('/wp-content/themes/bravada/resources/fonts/blocks.eot');
+    src: url('/wp-content/themes/bravada/resources/fonts/blocks.eot#iefix') format('embedded-opentype'),
+        url('/wp-content/themes/bravada/resources/fonts/blocks.woff') format('woff'),
+        url('/wp-content/themes/bravada/resources/fonts/blocks.ttf') format('truetype'),
+        url('/wp-content/themes/bravada/resources/fonts/blocks.svg#blocks') format('svg');
     font-weight: normal;
     font-style: normal;
 }
